minor changes to make things functional

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/kaizer1v/Daytrippr.git"
   },
-  "author": "",
+  "author": "Vivek Shrinivasan, Nithin Davis",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kaizer1v/Daytrippr/issues"
