--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "the age of the jaguar",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "grunt serve"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,11 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.1"
   }
 }
